# dxx-redux

./: .gitignore  CLAUDE.md  ChangeLog.txt  README.md
.github/workflows/: package-all.yml  package-linux.yml  package-macos-arm.yml  package-macos.yml  package-msvc.yml  package-windows.yml  package-windows32.yml
contrib/packaging/linux/: build_package.sh
contrib/packaging/macos/: build_package.sh
contrib/packaging/windows/: build_package.sh
d1/: CMakeLists.txt  CMakePresets.json  INSTALL.txt  SConstruct  build.sh  d1x-Info.plist  d1x-default.ini  d1x-redux.desktop  d1xgl-Info.plist  vcpkg.json
d1/2d/: CMakeLists.txt  bitmap.c  font.c
d1/3d/: CMakeLists.txt  draw.c  instance.c
d1/English.lproj/: InfoPlist.strings
d1/arch/cocoa/: CMakeLists.txt  Info.plist
d1/arch/include/: event.h  joy.h  key.h
d1/arch/libfresample/: CMakeLists.txt  reflog.txt
d1/arch/libfresample/LibFResample.xcodeproj/: project.pbxproj
d1/arch/ogl/: CMakeLists.txt  gr.c  ogl.c  oglfbo.c  oglfbo.h  oglprog.c
d1/arch/resample/: polyphase_resampler.cpp  polyphase_resampler.h  resample.h
d1/arch/sdl/: CMakeLists.txt  digi_audio.c  digi_mixer.c  digi_mixer_music.c  event.c  gr.c  init.c  joy.c  jukebox.c  key.c  mouse.c  rbaudio.c  resample.h  timer.c
d1/arch/win32/: CMakeLists.txt  crashdump.c  d1x-rebirth.rc  d1x-redux.exe.manifest
d1/arch/x11/: CMakeLists.txt
d1/editor/: CMakeLists.txt
d1/iff/: CMakeLists.txt
d1/include/: 3d.h  args.h  gr.h  hmp.h  ogl_init.h  physfsx.h  pngfile.h  pstypes.h  strutil.h
d1/main/: CMakeLists.txt  ai.c  ai.h  automap.c  automap.h  bm.c  cntrlcen.c  collide.c  config.c  config.h  console.c  controls.c  custom.c  digiobj.c  endlevel.c  endlevel.h  fireball.c  fuelcen.c  fuelcen.h  fvi.c  game.c  game.h  gamecntl.c  gamefont.c  gamemine.c  gamerend.c  gamesave.c  gamesave.h  gameseg.c  gameseq.c  gameseq.h  gauges.c  gauges.h  hud.c  hudmsg.h  inferno.c  kconfig.c  kmatrix.c  laser.c  laser.h  (+42 more)
d1/maths/: CMakeLists.txt  fixc.c
d1/mem/: CMakeLists.txt  mem.c
d1/misc/: CMakeLists.txt  args.c  hmp.c  physfsx.c  pngfile.c  strutil.c
d1/texmap/: CMakeLists.txt
d1/ui/: CMakeLists.txt
d1/xmodel/: CMakeLists.txt  README.txt  aseread.cpp  carray.h  strfunc.h  submodel.h  xcfile.h  xdescent.h  xmaths.h  xmodel.cpp  xmodelnames.h  xpstypes.h  xvecmat.h
d2/: CMakeLists.txt  CMakePresets.json  INSTALL.txt  SConstruct  d2x-Info.plist  d2x-default.ini  d2x-redux.desktop  d2xgl-Info.plist  vcpkg.json
d2/2d/: CMakeLists.txt  bitblt.c  bitmap.c  font.c
d2/3d/: CMakeLists.txt  draw.c  instance.c  interp.c
d2/English.lproj/: InfoPlist.strings
d2/arch/carbon/: CMakeLists.txt
d2/arch/cocoa/: CMakeLists.txt  Info.plist  messagebox.m  messagebox.mm
d2/arch/include/: digi_audio.h  digi_mixer.h  event.h  key.h
d2/arch/ogl/: CMakeLists.txt  gr.c  ogl.c  oglprog.c  oglprog.h
d2/arch/sdl/: CMakeLists.txt  digi.c  digi_audio.c  digi_mixer.c  digi_mixer_music.c  event.c  gr.c  init.c  joy.c  jukebox.c  key.c  mouse.c  rbaudio.c  timer.c
d2/arch/win32/: CMakeLists.txt  crashdump.c  d2x-rebirth.rc  rbaudio.c
d2/arch/x11/: CMakeLists.txt  messagebox.c  x11messagebox.c  x11messagebox.h
d2/editor/: CMakeLists.txt  info.c
d2/iff/: CMakeLists.txt
d2/include/: 3d.h  args.h  console.h  dxxerror.h  gr.h  ogl_init.h  physfsrwops.h  physfsx.h  strutil.h  timer.h  vecmat.h  xmodel.h
d2/libmve/: CMakeLists.txt  mve_main.c  mveplay.c
d2/main/: CMakeLists.txt  ai.c  ai2.c  automap.c  automap.h  bm.c  cntrlcen.c  cntrlcen.h  collide.c  config.c  config.h  console.c  controls.c  controls.h  digi.h  digiobj.c  endlevel.c  endlevel.h  escort.c  fireball.c  fuelcen.c  fuelcen.h  fvi.c  game.c  game.h  gamecntl.c  gamefont.c  gamemine.c  gamerend.c  gamesave.c  gamesave.h  gameseg.c  gameseq.c  gameseq.h  gauges.c  gauges.h  hud.c  inferno.c  kconfig.c  kmatrix.c  (+38 more)
d2/maths/: CMakeLists.txt  fixc.c  vecmat.c
d2/mem/: CMakeLists.txt
d2/misc/: CMakeLists.txt  args.c  error.c  hmp.c  physfsrwops.c  physfsx.c  pngfile.c  strutil.c
d2/texmap/: CMakeLists.txt
d2/ui/: CMakeLists.txt
d2/xmodel/: ase.h  carray.h  strfunc.h  submodel.cpp  tga.cpp  tga.h  xcfile.h  xdescent.h  xfix.h  xmaths.h  xmodel.cpp  xmodelnames.h  xpstypes.h  xvecmat.h
docs/: unity-feature-parity-plan.md  unity-netgame-host-settings.md  unity-port-plan.md
docs/superpowers/plans/: 2026-07-10-triple-monitor-surround.md  2026-07-11-hud-minimap.md  2026-07-11-rear-mirror-pip.md  2026-07-12-powerup-3d-models.md
docs/superpowers/specs/: 2026-07-10-triple-monitor-surround-design.md  2026-07-11-hud-minimap-design.md  2026-07-11-rear-mirror-pip-design.md  2026-07-12-weapon-powerup-3d-models-design.md
unity/: .gitignore
unity/Assets/: DefaultVolumeProfile.asset  UniversalRenderPipelineGlobalSettings.asset
unity/Assets/Editor/: D1UProjectSetup.cs  D1UUrpSetup.cs
unity/Assets/Plugins/LibDescent.Data/: BBMImage.cs  BSPModel.cs  BSPTree.cs  BinaryReaderBE.cs  BinaryWriterBE.cs  Color.cs  Descent1PIGFile.cs  DescentReader.cs  DescentWriter.cs  EClip.cs  EditorObjectDefinition.cs  ElementLists.cs  Fix.cs  FixVector.cs  Font.cs  HAMDataReader.cs  HAMDataWriter.cs  HAMElement.cs  HAMFile.cs  HOGFile.cs  HOGLump.cs  HXMFile.cs  IDataFile.cs  IElementManager.cs  IImageProvider.cs  IIndexedImage.cs  ISoundProvider.cs  InsertionOrderedDictionary.cs  LICENSE  LibDescent.Data.asmdef  MissionFile.cs  ModelOpCode.cs  NameHelper.cs  PCXImage.cs  PIGFile.cs  PIGImage.cs  POFReader.cs  POFWriter.cs  POGFile.cs  PSXDatFile.cs  (+20 more)
unity/Assets/Scenes/: D1ULevelViewer.unity
unity/Assets/Settings/: D1U_Renderer.asset  D1U_URP.asset
unity/Assets/Shaders/: D1ULevel.shader
unity/ProjectSettings/: EditorSettings.asset  GraphicsSettings.asset  InputManager.asset  MemorySettings.asset  ProjectSettings.asset  QualitySettings.asset
unity/tools/D1U.Convert/: D1U.Convert.csproj
unity/tools/D1U.Game/: D1U.Game.csproj
unity/tools/LibDescent.Data/: LibDescent.Data.csproj
unity/tools/PresentationCheck/: PresentationCheck.csproj
unity/tools/Smoke/: Program.cs  Smoke.csproj  TableJson.cs
(+73 files in other folders)
