# CMakeList.txt : CMake project for d2x-retro, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)
project(d2x-retro)

option(OPENGL "Build with OpenGL support [default: ON]" ON)
option(SDLMIXER "Build with SDL_Mixer support for sound and music (includes external music support) [default: ON]" ON)
option(ASM "Build with ASSEMBLER code (only with OpenGL OFF, requires NASM and x86) [default: OFF]" OFF)
option(EDITOR "Include editor into build (experimental) [default: OFF]" OFF)
option(IPV6 "Enable IPv6 compability [default: OFF]" OFF)
option(UDP "Enable UDP support [default: ON]" ON)
option(TRACKER "Enable Tracker support (requires UDP) [default: ON]" ON)

set(CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL} /DRELEASE")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /DRELEASE")
set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} /DRELEASE")

# Global compile flags (have to be processed before subdirectories by some
#  CMake implementations - even though the docs say they don't)
add_definitions(/DNETWORK)
if(OPENGL)
    add_definitions(/DOGL)
elseif(ASM)
    if(WIN32)
        enable_language(ASM_MASM)
        set(ASM_DIALECT "MASM")
    elseif(__LINUX__)
        enable_language(ASM_NASM)
        set(ASM_DIALECT "NASM")
    endif()
endif()
if(SDLMIXER)
    add_definitions(/DUSE_SDLMIXER)
endif()
if(EDITOR)
    add_definitions(/DEDITOR)
endif()
if(IPV6)
    add_definitions(/DIPv6)
endif()
if(UDP)
    add_definitions(/DUSE_UDP)
    if(TRACKER)
        add_definitions(/DUSE_TRACKER)
    endif()
endif()

if(WIN32)
    add_definitions(/DWINDOWS /DHAVE_STRUCT_TIMEVAL)
elseif(__APPLE__)
    add_definitions(/DHAVE_STRUCT_TIMESPEC /DHAVE_STRUCT_TIMEVAL /D__unix__)
elseif(__LINUX__)
    add_definitions(/D__LINUX__ /DHAVE_STRUCT_TIMESPEC /DHAVE_STRUCT_TIMEVAL)
endif()

add_subdirectory(2d)
add_subdirectory(3d)
add_subdirectory(arch/sdl)
add_subdirectory(iff)
add_subdirectory(libmve)
add_subdirectory(main)
add_subdirectory(maths)
add_subdirectory(mem)
add_subdirectory(misc)
add_subdirectory(texmap)

add_dependencies(d2x-retro 2d 3d arch_sdl iff libmve maths mem misc texmap)

if(WIN32)
    add_subdirectory(arch/win32)
    add_dependencies(d2x-retro arch_win32)
endif()

if(__APPLE__)
    add_subdirectory(arch/carbon)
    add_subdirectory(arch/cocoa)
    add_dependencies(d2x-retro arch_carbon arch_cocoa)
endif()

if(OPENGL)
    add_subdirectory(arch/ogl)
    add_dependencies(d2x-retro arch_ogl)
endif()

if(EDITOR)
    add_subdirectory(editor)
    add_subdirectory(ui)
    add_dependencies(d2x-retro editor ui)
endif()
